--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -173,7 +173,7 @@ p {
 .cv-row {
     display: flex;
     flex-wrap: wrap; /* Gör att raderna kan bryta på små skärmar */
-    background: linear-gradient(90deg, #ffffff, #f8feff);
+    background: linear-gradient(180deg, #f8feff, #c1f0f8);
     border-radius: 8px;
     padding: 15px;
     align-items: center;
@@ -263,7 +263,7 @@ p {
     display: flex;
     flex-direction: column; /* Säkerställ vertikal layout på små skärmar */
     gap: 10px;
-    background: linear-gradient(90deg, #ffffff, #f8feff);
+    background: linear-gradient(180deg, #f8feff, #c1f0f8);
     padding: 20px;
     margin: 20px 0;
     border-radius: 8px;
@@ -355,7 +355,7 @@ p {
 }
 
 .modal-content {
-    background: white;
+    background: linear-gradient(180deg, #f8feff, #c1f0f8);
     padding: 20px;
     border-radius: 10px;
     width: 80%;
@@ -386,7 +386,11 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 50px; /* Sätt en höjd */
+    line-height: 50px; /* Samma som höjden för att centrera texten */
 }
+
+
 
 /* Media Query för små skärmar (t.ex. 768px eller mindre) */
 @media (max-width: 768px) {
