--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -398,7 +398,13 @@ footer {
         flex-direction: column;
         align-items: center;
     }
-
+    
+/*Mindre subtitle text*/
+.subtitle {
+    font-size: 0.9rem;
+    opacity: 0.8;
+}
+    
 /* Visa hamburgermenyn som knapp */
 .menu-toggle {
     display: block;
