--- a/CSS/styles_blue.css
+++ b/CSS/styles_blue.css
@@ -11,15 +11,15 @@
 
 /* Body */
 body {
-    background-color: #fafafa;
-    color: #444;
+    background-color: #f4f4f4;
+    color: #333;
     line-height: 1.6;
     text-align: center;
 }
 
 /* Header */
 .header {
-    background: linear-gradient(to right, #2a9d8f, #264653);
+    background: linear-gradient(to right, #0077b6, #00b4d8);
     color: white;
     text-align: center;
     padding: 2rem 1rem;
@@ -36,7 +36,7 @@ body {
 
 .profile-pic:hover {
     transform: scale(1.1);
-    box-shadow: 0px 0px 25px #4fa3ad;
+    box-shadow: 0px 0px 25px #5d87b1;
 }
 
 .name {
@@ -54,7 +54,7 @@ body {
 .nav {
     display: flex;
     justify-content: center;
-    background: #2a9d8f;
+    background: #0077b6;
     padding: 1rem 0;
 }
 
@@ -78,9 +78,9 @@ body {
 }
 
 .nav a:hover, .nav a.active {
-    color: #bcf7f0;
+    color: #90e0ef;
     font-weight: bold;
-    border-bottom: 2px solid #4dd1c2;
+    border-bottom: 2px solid #90e0ef;
 }
 
 /* Main Content */
@@ -94,7 +94,7 @@ body {
 }
 
 h2 {
-    color: #2a9d8f;
+    color: #0077b6;
     margin-bottom: 1rem;
 }
 
@@ -127,7 +127,7 @@ p {
     justify-content: center;
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: #218377;
+    -webkit-text-fill-color: #5c679a;
 }
 
 .skills-list li:hover {
@@ -139,11 +139,11 @@ p {
 }
 
 .skills-list i {
-    background: linear-gradient(90deg, #2a9d8f, #264653);
+    background: linear-gradient(90deg, #0077b6, #00b4d8);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 1em;
-    color: #2a9d8f;
+    color: #0077b6;
     font-size: 1.4em;
 }
 
@@ -163,7 +163,7 @@ p {
 /* CV Header */
 .cv-section h3 {
     font-size: 1.4rem;
-    color: #2a9d8f;
+    color: #0077b6;
     margin-bottom: 1.5rem;
 }
 
@@ -178,7 +178,7 @@ p {
 .cv-row {
     display: flex;
     flex-wrap: wrap; /* Gör att raderna kan bryta på små skärmar */
-    background: linear-gradient(180deg, #f0f9ff, #d4e9e6);
+    background: linear-gradient(180deg, #f8feff, #c1f0f8);
     border-radius: 8px;
     padding: 15px;
     align-items: center;
@@ -199,13 +199,13 @@ p {
 
 .cv-left h4 {
     font-size: 1.2rem;
-    color: #2a9d8f;
+    color: #0077b6;
     margin-bottom: 5px;
 }
 
 .cv-left p {
     font-size: 1rem;
-    color: #2a9d8f;
+    color: #0077b6;
 }
 
 .cv-left .date {
@@ -273,7 +273,7 @@ p {
     display: grid;
     grid-template-columns: 1fr; /* En kolumn per container */
     gap: 1rem;
-    background: linear-gradient(180deg, #f0f9ff, #d4e9e6);
+    background: linear-gradient(180deg, #f8feff, #c1f0f8);
     padding: 20px;
     border-radius: 8px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -285,7 +285,7 @@ p {
 }
 
 .project-container h3 {
-    color: #2a9d8f;
+    color: #0077b6;
     text-align: center;
 }
 
@@ -320,7 +320,7 @@ p {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background: #2a9d8f;
+    background: #1ca2eb;
     color: white;
     font-size: 1em;
     text-decoration: none;
@@ -329,7 +329,7 @@ p {
 }
 
 .btn:hover {
-    background: #33ad9f;
+    background: #0077b6;
 }
 
 /* Media Query för små skärmar (t.ex. 768px eller mindre) */
@@ -376,7 +376,7 @@ p {
 }
 
 .modal-content {
-    background: linear-gradient(180deg, #f0f9ff, #d4e9e6);
+    background: linear-gradient(180deg, #f8feff, #c1f0f8);
     padding: 20px;
     border-radius: 10px;
     width: 80%;
@@ -401,7 +401,7 @@ p {
 footer {
     text-align: center;
     font-size: 0.8rem;
-    background: #2a9d8f;
+    background: #0077b6;
     color: white;
     margin-top: 2rem;
     position: fixed;
@@ -420,29 +420,29 @@ footer {
         align-items: center;
     }
 
-    /* Visa hamburgermenyn som knapp */
-    .menu-toggle {
-        display: block;
-        cursor: pointer;
-        font-size: 16px;
-        color: white;
-        visibility: visible; /* Se till att knappen alltid är synlig */
-        opacity: 1; /* Gör knappen synlig */
-    }
+/* Visa hamburgermenyn som knapp */
+.menu-toggle {
+    display: block;
+    cursor: pointer;
+    font-size: 16px;
+    color: white;
+    visibility: visible; /* Se till att knappen alltid är synlig */
+    opacity: 1; /* Gör knappen synlig */
+}
 
-    /* Dölj menyn på små skärmar (initialt) */
-    .nav a:not(.menu-toggle) {
-        display: none;
-    }
+/* Dölj menyn på små skärmar (initialt) */
+.nav a:not(.menu-toggle) {
+    display: none;
+}
 
-    /* Visa menyn när den aktiveras via JavaScript (när 'open' klassen är tillagd) */
-    .nav.open a {
-        display: block;
-    }
+/* Visa menyn när den aktiveras via JavaScript (när 'open' klassen är tillagd) */
+.nav.open a {
+    display: block;
+}
 
-    /*Mindre subtitle text*/
-    .subtitle {
-        font-size: 0.9rem;
-        opacity: 0.8;
-    }
+/*Mindre subtitle text*/
+.subtitle {
+    font-size: 0.9rem;
+    opacity: 0.8;
+}
 }
